tests/fixtures/hub-module/example/1/bad/src/beta.ts
export const betaValue = "beta"

export const readBeta = (): string => betaValue
